@@ -84,6 +84,9 @@ Release 1.0 (in development)
 Release 0.6.5 (in development)
 ==============================
 
+* Make the ``start-after`` and ``end-before`` options to the
+  ``literalinclude`` directive work correctly if not used together.
+
 * #321: Fix link generation in the LaTeX builder.
 
 
